datasets/dataset_txt/mitmproxy/mitmproxy_292.txt
jenskueper commented on 25 May 2018
Steps to reproduce the problem:
Install the latest mitmproxy version via pip 10 under Debian 9
Hey, I justed updated mitmproxy and if I want to run it, I get the following error:
Traceback (most recent call last):
File "/usr/local/bin/mitmproxy", line 7, in
from mitmproxy.tools.main import mitmproxy
File "/usr/local/lib/python3.5/dist-packages/mitmproxy/tools/main.py", line 101
server: typing.Any = None
^
SyntaxError: invalid syntax
Does anybody have an idea what causes this?